# Forge

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/forge/: counting_writer.rs  csv.rs  error.rs  generator.rs  json.rs  mod.rs  pdf.rs  utils.rs  xml.rs
