[package]
name = "datagen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
fake = { version = "5.1.0", features = ["uuid", "time", "http"] }
genpdf = "0.2.0"
rust-embed = "8.11.0"
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
xml = "1.3.0"
